BugFix: Prevent line breaks on buttons

--- a/Customer/rideList/mobile.css
+++ b/Customer/rideList/mobile.css
@@ -294,8 +294,6 @@
         display: flex; flex-direction: row;
         align-items: center; justify-content: center;
         padding: 4%; padding-top: 2.5%; padding-bottom: 2.5%;
-        /* Prevent line breaks for buttons */
-        white-space: nowrap; overflow: hidden;
         font-size: 3.2vw;
     }
 
